--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# --- JWT Configuration ---
+jwt.secret.key=${JWT_SECRET_KEY}
