--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build the application
-# We use a Java 21 JDK image to build our app
+# We use a Java 21 JDK image as requested
 FROM eclipse-temurin:21-jdk AS builder
 
 # Set the working directory inside the container
@@ -11,13 +11,15 @@ COPY gradle ./gradle
 COPY build.gradle .
 COPY settings.gradle .
 
+# ✅ FIX: Force the JVM to use TLSv1.2 for network requests
+ENV JAVA_OPTS="-Dhttps.protocols=TLSv1.2"
+
 # Download dependencies
 RUN ./gradlew dependencies
 
 # Copy the rest of the source code
 COPY src ./src
 
-# --- THIS IS THE FIRST FIX ---
 # Change 'build' to 'bootJar' to build only the executable fat jar
 RUN ./gradlew bootJar --no-daemon
 
@@ -26,7 +28,6 @@ FROM eclipse-temurin:21-jre
 
 WORKDIR /app
 
-# --- THIS IS THE SECOND FIX ---
 # Explicitly copy the correct jar file (based on your build.gradle)
 COPY --from=builder /app/build/libs/backend-0.0.1-SNAPSHOT.jar app.jar
 
