--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,6 @@
 # Stage 1: Build the React app
-FROM node:22-alpine AS builder
+# ✅ FIX: Use the Long-Term Support (LTS) version of Node
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 
