--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,3 +14,12 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # --- JWT Configuration ---
 jwt.secret.key=${JWT_SECRET_KEY}
+
+# ✅ --- NEW: HIKARI POOL FIX FOR SUPABASE ---
+# This fixes the "Connection has been closed" errors
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.max-lifetime=180000
+spring.datasource.hikari.idle-timeout=120000
+
+# ✅ --- THIS IS THE FIX FOR THE "max clients reached" ERROR ---
+spring.datasource.hikari.maximum-pool-size=3
